--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {
-    "gulp-connect": "^4.0.0",
+    "bower": "^1.7.9",
     "gulp": "^3.9.1",
+    "gulp-connect": "^4.0.0",
     "gulp-inject": "^4.1.0",
     "gulp-livereload": "^3.8.1",
     "gulp-open": "^2.0.0",
@@ -14,7 +15,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "bower install"
   },
   "repository": {
     "type": "git",
