--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "loocator",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "gulpfile.js",
   "dependencies": {
     "bower": "^1.7.9",
     "gulp": "^3.9.1",
