--- a/package.json
+++ b/package.json
@@ -1,30 +1,39 @@
 {
-  "name": "loocator",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "dependencies": {
-    "bower": "^1.7.9",
-    "gulp": "^3.9.1",
-    "gulp-connect": "^4.0.0",
-    "gulp-inject": "^4.1.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-open": "^2.0.0",
-    "gulp-util": "^3.0.7",
-    "wiredep": "^4.0.0"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "postinstall": "bower install"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tobyCurtis/LooCator.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/tobyCurtis/LooCator/issues"
-  },
-  "homepage": "https://github.com/tobyCurtis/LooCator#readme"
+    "name": "loocator",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "dependencies": {
+        "bower": "^1.7.9",
+        "gulp": "^3.9.1",
+        "gulp-connect": "^4.0.0",
+        "gulp-inject": "^4.1.0",
+        "gulp-livereload": "^3.8.1",
+        "gulp-open": "^2.0.0",
+        "gulp-util": "^3.0.7",
+        "wiredep": "^4.0.0"
+    },
+    "devDependencies": {
+        "bower": "^1.7.9",
+        "gulp": "^3.9.1",
+        "gulp-connect": "^4.0.0",
+        "gulp-inject": "^4.1.0",
+        "gulp-livereload": "^3.8.1",
+        "gulp-open": "^2.0.0",
+        "gulp-util": "^3.0.7",
+        "wiredep": "^4.0.0"
+    },
+    "scripts": {
+        "postinstall": "bower install"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/tobyCurtis/LooCator.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/tobyCurtis/LooCator/issues"
+    },
+    "homepage": "https://github.com/tobyCurtis/LooCator#readme"
 }
