--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
-  "name": "ngrepeat test",
+  "name": "loocator",
   "authors": [
     "Toby <curti024@csusm.edu>"
   ],
   "description": "",
   "main": "",
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://github.com/tobyCurtis/LooCator",
   "dependencies": {
     "angular": "^1.5.5",
     "angular-animate": "^1.5.7",
